--- a/styles.less
+++ b/styles.less
@@ -1,3 +1,4 @@
+// Custom font faces
 @font-face {
   font-family: 'Ghibli Regular';
   font-style: normal;
@@ -19,6 +20,22 @@
   src: url('./Zoltana-Regular.ttf'); 
 }
 
+@font-face {
+  font-family: 'Fontin-Regular';
+  font-style: normal;
+  font-weight: normal;
+  src: url('./Fontin_Sans_r_45b.otf'); 
+}
+
+@font-face {
+  font-family: 'Saint-Carell-Regular';
+  font-style: normal;
+  font-weight: normal;
+  src: url('./SaintCarell_reg.otf'); 
+}
+
+
+// Colors
 @doc-bg-color: #171717;
 @gc-golden-light: #f7e77c;
 @gc-golden-dark: #9e7216;
@@ -27,11 +44,26 @@
 @ghibli-island-teal: #0faebd;
 @ghibli-mountain-blue: #204979;
 @golden-company-brown: #130e03;
+@golden-company-gray: #0c0902;
+
+// General spacing and widths
 @max-width: 1400px;
+@module-bot-margin: 10vh;
+
+// MQ module widths for padded mods
+@xl-mod-width: 1200px;
+@lg-mod-width: 1000px;
+@md-mod-width: 790px;
+@sm-mod-width: 685px;
+
+// Custom fonts
 @ghibli-reg: 'Ghibli Regular', Arial, sans-serif;
 @ghibli-bold: 'Ghibli Bold', Arial, sans-serif;
 @zoltana-reg: 'Zoltana-Regular', Arial, sans-serif;
+@fontin-reg: 'Fontin-Regular', Arial, sans-serif;
+@saint-reg: 'Saint-Carell-Regular', Arial, sans-serif;
 
+// ========== GENERAL STYLES ==========
 body, p, h1, h2, h3, h4, h5, h6 {
   margin: 0;
   padding: 0;
@@ -113,30 +145,30 @@ a {
 
 .gc-primary-em {
   text-shadow: #fc0 1px 0 10px;
-  font-size: 3.2rem;
-  line-height: 3.6rem;
   display: block;
+  font-size: 3rem;
+  line-height: 3.6rem;
 }
 .gc-secondary-em {
-  text-shadow: #fc0 1px 0 2px;
+  text-shadow: #fc0 1px 0 1px;
   color: @gc-golden-light;
 }
 .gc-tertiary-em {
-  text-shadow: #fc0 1px 0 10px; 
-}
+  text-shadow: #fc0 1px 0 5px; 
+} 
 // ========== END GENERAL STYLES ==========
 
 
-// ==================== DESKTOP GENERAL STYLES ====================
+// ==================== DESKTOP STYLES ====================
 #desktop-main {
   margin: 0 auto;
   #gc-hero-banner {
+    margin: 2vh auto @module-bot-margin; 
     background-image: url('./assets/ghibli_nighttime_mail_center.png');
     background-size: 100%;
     background-position: center bottom;
     background-repeat: no-repeat; 
-    width: 100%;
-    margin-bottom: 20px;
+    width: 100%; 
     #gc-banner {
       background-image: url('./assets/ghibli_gc_banner_blank.png'); 
       background-position: center;
@@ -151,8 +183,9 @@ a {
     }
   }
 
+  // ==================== Intro Mod Styles ====================
   #intro-mod {
-    margin-bottom: 20px;
+    margin: 0 auto @module-bot-margin; 
     #intro-content {
       .c1 {
         h2 {
@@ -169,9 +202,11 @@ a {
       }
     }
   }
+  // ==================== END Intro Mod Styles ====================
 
+  // ==================== Operation Mod Styles ====================
   #operation-mod {
-    margin-bottom: 20px;
+    margin: 0 auto @module-bot-margin; 
     h3 {
       padding: 40px 0 20px;
     } 
@@ -240,6 +275,66 @@ a {
       }
     }
   }
+  // ==================== END Operation Mod Styles ====================
+
+  // ==================== Journey Mod Styles ====================
+  #journey-mod {
+    text-align: center;  
+    margin-bottom: @module-bot-margin; 
+    background-color: #1d130e;
+    background-image: linear-gradient( rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1) ), url('./assets/ghibli_mailclerk_banner_faded.png');
+    background-position: top;
+    background-repeat: no-repeat;
+    padding: 10vh 0;
+    #journey-container {
+      h2 {
+        font-family: @saint-reg;
+        color: @gc-ivory; 
+        font-size: 3.2rem;
+        margin-bottom: 10px;
+      }
+      p.subhead {
+        font-size: 20px;
+        line-height: 30px;
+        margin-bottom: 20px;
+      }
+      img {
+        margin: 0 auto;
+      }
+      #gallery-container { 
+        .tile {
+          width: 25%;
+          padding: 0 25px;
+          text-align: left;
+          div {
+            max-width: 300px;
+            margin: 0 auto;
+            background-color: @golden-company-brown;
+            border-radius: 25px;
+            border: 1px solid @gc-ivory;
+            padding-bottom: 20px;
+            p {
+              padding: 15px 20px 0;
+            }
+            img {
+              border-radius: 25px;
+            }
+            .medium {
+              font-size: 14px;
+              line-height: 20px;
+              color: #454a48;
+            }
+            .title {
+              font-family: @saint-reg;
+              font-size: 24px;
+              line-height: 30px;
+            }
+          }
+        } 
+      }
+    }
+  }
+  // ==================== END Journey Mod Styles ====================
 }
 
 // ==================== MEDIA QUERIES ====================
@@ -253,12 +348,13 @@ a {
   }
 } 
 
+
 // Small devices - Tablet-specific
 @media only screen and (min-width: 750px) and (max-width: 991px) {
   #desktop-main {
-    width: 685px;
     #gc-hero-banner {
       height: 400px;
+      width: @sm-mod-width;
       #gc-banner {
         height: 130px;
         background-size: 340px 100px;
@@ -276,6 +372,7 @@ a {
     } 
 
     #intro-mod {
+      width: @sm-mod-width;
       #intro-content {
         .c1 {
           padding: 30px;
@@ -291,6 +388,7 @@ a {
 
     // ==================== Operation Module Styles ====================
     #operation-mod {
+      width: @sm-mod-width;
       margin-bottom: 20px; 
       .c1 { 
         #operation-container { 
@@ -299,7 +397,7 @@ a {
               line-height: 168px; 
               font-size: 38px; 
               &:hover { 
-                font-size: 3rem;
+                font-size: 2.6rem;
               }
             }
             &.tile-1 { 
@@ -335,14 +433,14 @@ a {
     // ==================== END Operation Module Styles ====================
   }
 }
- 
+
 
 // Medium devices 
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
   #desktop-main {
-    width: 790px;
     #gc-hero-banner {
       height: 500px; 
+      width: @md-mod-width;
       #gc-banner {
         height: 215px;
         background-size: 400px 140px; 
@@ -360,6 +458,7 @@ a {
     }
 
     #intro-mod {
+      width: @md-mod-width;
       #intro-content {
         .c1 {
           padding: 30px;
@@ -375,6 +474,7 @@ a {
 
     // ==================== Operation Module Styles ====================
     #operation-mod {
+      width: @md-mod-width;
       margin-bottom: 20px; 
       .c1 { 
         #operation-container { 
@@ -410,12 +510,13 @@ a {
   }
 }
 
+
 // Large devices
 @media only screen and (min-width: 1200px) and (max-width: 1399px) {
   #desktop-main {
-    width: 1000px;
     #gc-hero-banner {
       height: 600px; 
+      width: @lg-mod-width;
       #gc-banner {
         height: 215px;
         background-size: 500px 180px; 
@@ -433,6 +534,7 @@ a {
     }
 
     #intro-mod {
+      width: @lg-mod-width;
       #intro-content {
         .c1 {
           h2 {
@@ -452,14 +554,14 @@ a {
     // ==================== Operation Module Styles ====================
     #operation-mod {
       margin-bottom: 20px;
+      width: @lg-mod-width;
       .c1 { 
         padding-right: 5px;
         #operation-container { 
           .tile {
             h4 {
               line-height: 123px;  
-              font-size: 38px; 
-            }
+            } 
           }  
         } 
       } 
@@ -481,12 +583,16 @@ a {
   }
 }
 
+
 // XLarge devices
 @media only screen and (min-width: 1400px) {
   #desktop-main {
-    width: 1200px;
+    #intro-mod, #operation-mod {
+      width: @xl-mod-width;
+    }
     #gc-hero-banner {
       height: 700px;  
+      width: @xl-mod-width;
       #gc-banner {
         height: 215px;
         background-size: 600px 200px;
@@ -501,6 +607,6 @@ a {
           padding: 5px 0 0;
         }
       }
-    }
-  } 
-}
+    } 
+  }
+} 
